2004-06-04    Ping Cheng <pingc@wacom.com>
	* Updated configure.in for option verification
	* Removed XFree86/xorg.conf 3.x code
	* Fixed XF86Config multi-word identifier issue
	* Fixed warnings in X.org 6.7.0

2004-05-24    Ping Cheng <pingc@wacom.com>
        * Merged changes from 2.6.6 kernel Dan Bullok <dan.devel@bullok.com>
	* Support protocol V dual input for both serial and USB
	* Fixed wacomcpl-exec Feel window bug
	* Released version 0.6.3

2004-05-18    Ping Cheng <pingc@wacom.com>
	* Fixed Relative Speed bug
	* Added a workaround for TPCButton to deal with XFree86 button
	  bug (occasionally unreleased left click when simultaneously
	  pressed with another button)

2004-05-14    Ping Cheng <pingc@wacom.com>
	* Removed DoubleSpeed and DoubleRadius options (use system default instead)
	* Fixed tool on tablet when driver starts issue
	* Updated wacomcpl and webpages
	* Added MODVER string to default option in configure.in

2004-04-02    Ping Cheng <pingc@wacom.com>
	* Fixed TwinView Absolute mode and DoubleSpeed check
	* Fixed tool on tablet when driver starts issue
	* Released version 0.6.2

2004-03-11    Ping Cheng <pingc@wacom.com>
	* Modified wacusb.c for Debian
	* Fixed DoubleSpeed and DoubleRadius issues

2004-03-05    Ping Cheng <pingc@wacom.com>
	* Modified tcl and tk configuration options
	* Updated webpage for kernel 2.6 support

2004-03-02    Ping Cheng <pingc@wacom.com>
	* Support 2.6.2/3 (Ned Konz)
	* Released version 0.6.1

2004-02-24    Ping Cheng <pingc@wacom.com>
	* Support module versioning for kernel 2.4.22 and later (Adrian Secord)
	* Added "Mode Toggle" to button functions to switch mode

2004-02-05    Ping Cheng <pingc@wacom.com>
	* Work around for 2.4.24 support (Marek Olszewski)

2004-02-04    Ping Cheng <pingc@wacom.com>
	* Released version 0.6.0

2004-01-19    Ping Cheng <pingc@wacom.com>
	* Sync wacom.c in kernel 2.6 with wacom.c in kernel 2.4 (Ned Konz)
	* Work around for 2.4.23 support (Jens Georg)
